--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,115 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700&display=swap');
+
+:root {
+    --primary: #118c4f;
+    --background: #f5f8ff;
+}
+
+.primary {
+    color: var(--primary);
+}
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Fira Sans', sans-serif;
     scroll-behavior: smooth;
     user-select: none;
+}
+
+ul {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+    color: #333;
+}
+
+.container {
+    max-width: 1240px;
+    margin: auto;
+
+}
+
+body {
+    font-family: 'Fira Sans', sans-serif;
+    overflow-x: hidden;
+}
+
+h1 {
+    font-size: 3.5rem;
+    line-height: 1.2;
+}
+
+h2 {
+    font-size: 2.4rem;
+    line-height: 1.2;
+}
+
+h5 {
+    font-size: 1.1rem;
+    line-height: 1.2;
+}
+
+p {
+    font-size: 1.2rem;
+}
+
+.btn {
+    padding: 14px 32px;
+    border: 1px solid var(--primary);
+    background: var(--primary);
+    color: #fff;
+    border-radius: 24px 4px;
+    font-size: 1.1rem;
+    font-weight: 600;
+    cursor: pointer;
+
+    &:hover {
+        box-shadow: #00000088 0 8px 24px;
+    }
+
+    &:focus {
+        box-shadow: none;
+    }
+}
+
+input {
+    padding: 12px 32px;
+    border: 1px solid var(--primary);
+    background: transparent;
+    border-radius: 24px 4px;
+    font-size: 1rem;
+    margin-right: 0.8rem;
+}
+
+@media (max-width: 768px) {
+    h1 {
+        font-size: 2.1rem;
+        line-height: 1.2;
+    }
+
+    h2 {
+        font-size: 1.5rem;
+        line-height: 1.2;
+    }
+
+    h5 {
+        font-size: 1.1rem;
+        line-height: 1.2;
+    }
+
+    p {
+        font-size: 1rem;
+    }
+
+    .btn {
+        width: 100%;
+        margin: 1rem 0;
+    }
+
+    input {
+        width: 100%;
+    }
 }
