--- a/src/index.scss
+++ b/src/index.scss
@@ -15,6 +15,7 @@
     box-sizing: border-box;
     scroll-behavior: smooth;
     user-select: none;
+    overflow-x: clip;
 }
 
 ul {
@@ -34,7 +35,6 @@ a {
 
 body {
     font-family: 'Fira Sans', sans-serif;
-    overflow-x: hidden;
 }
 
 h1 {
@@ -67,11 +67,7 @@ p {
     cursor: pointer;
 
     &:hover {
-        box-shadow: #00000088 0 8px 24px;
-    }
-
-    &:focus {
-        box-shadow: none;
+        background: green;
     }
 }
 
