--- a/src/components/Signup.scss
+++ b/src/components/Signup.scss
@@ -7,7 +7,7 @@
         padding: 3rem 1rem;
 
         @media (max-width: 940px) {
-            grid-template-column: 1fr;
+            grid-template-columns: 1fr;
         }
     }
 
